--- a/mobile.css
+++ b/mobile.css
@@ -3,33 +3,36 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    font-family: 'Poppins', sans-serif;
+    /* font-size: 16px; */
+}
 main{
     display: flex;
     margin: 0 auto;
     flex-direction: column;
 }  
-.form-background{
+ .form-background{
     max-width: 600px;
     display: flex;
-    min-height: 100% ;
+    min-height: 100vh ;
     background-image: url(/img/bg-intro-desktop.png) ;
     background-color: hsl(0, 100%, 74%);
-    align-items: center;
+    /* align-items: center; */
     background-size: 100% 100%;
     background-repeat: repeat-y;
+    padding: 2em;
 }
 .banner-items{
     display: flex;
     flex-direction: column;
     /* margin: auto; */
 }
-.form-text{
+ .form-text{
     color: white;
     width: 90%;
     display: flex;
     flex-direction: column;
-    /* align-items: center;
-    justify-content: center; */
     text-align: center;
 }
 h1{
@@ -37,6 +40,36 @@ h1{
     margin-bottom: 2rem;
 }
 div p{
-    /* font-weight:400 ; */
-    font-size: small;
+    width: fit-content;
+    font-size: medium;
+    text-align: center;
+}
+
+.form{
+    margin-top: 2em;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+} 
+.trial{
+    background-color: #5d54a3;
+    border: 1px solid #5d54a3;
+    padding: 15px;
+    color: white;
+    font-size: 0.8em;
+    /* font-weight: 200; */
+    border-radius: 5px;
+    margin-bottom: 15px;
+    width: 100%;
+    box-shadow:0px 6px 8px hsl(249, 10%, 26%) ;
+    text-align: center;
+}
+form{
+    border-radius: 5px;
+    background-color: white;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    box-shadow:0px 8px 8px hsl(249, 10%, 26%) 
 }
